--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "require": {
         "php": ">=7.1",
-        "laravel/framework": "5.5.*|5.6.*|5.7.*"
+        "laravel/framework": "5.5.*|5.6.*|5.7.*|5.8.*"
     },
     "require-dev": {
         "orchestra/testbench": "~3.0"
