--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,11 @@
     "type": "library",
     "license": "MIT",
     "require": {
-        "php": ">=7.1",
-        "laravel/framework": "5.5.*|5.6.*|5.7.*|5.8.*|^6.0"
+        "php": "^7.2",
+        "laravel/framework": "5.8.*|^6.0|^7.0"
     },
     "require-dev": {
-        "orchestra/testbench": "~3.0|^4.0"
+        "orchestra/testbench": "^3.8|^4.0|^5.0"
     },
     "autoload": {
         "psr-4": {
@@ -32,5 +32,10 @@
                 "Coderello\\Proximage\\Providers\\ProximageServiceProvider"
             ]
         }
-    }
+    },
+    "config": {
+        "sort-packages": true
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
